# lotsofcoresbook1code

./: README.md
Chapter02/Pearl/: Makefile  README.txt  arch.hpp  compare.cpp  pcl-hydro-params.cpp  timeseries.cpp  version
Chapter03/Pearl/: LICENSE.txt  aclocal.m4  configure
Chapter04/: README.txt
Chapter04/Pearl/: GNUmakefile.mic  GNUmakefile.mic.mpi  omp.txt  runXeonMPI.sh  runXeonOMP.sh  runXeonPhiMPI.sh
Chapter05/Pearl/: Makefile  diffusion_base.c  diffusion_peel.c  diffusion_tiled_HT2.c  diffusion_tiled_HT3.c  readme.txt  run_xphi.sh
Chapter06/: README.txt
Chapter06/Pearl/: CONFIG  README  ftEvaluator.h  ftEvaluator.ispc  ftNamePool.cpp  ftNode.h  ftNodeVisitor.cpp
Chapter08/: README.txt
Chapter08/Pearl/: Makefile.openmpi  README.txt  atom.cpp  atom.h  comm.cpp  force.h  force_eam.cpp  force_eam.h  force_lj.cpp  force_lj.h  in.lj.miniMD  input.cpp  integrate.cpp  integrate.h  ljs.cpp  miniMD_intel  output.cpp  thermo.cpp  thermo.h  threadData.h  timer.cpp  types.h
Chapter09/Pearl/: README.txt  nbody.cc
Chapter10/: README.txt
Chapter10/Pearl/: README.txt
Chapter11/: README.txt
Chapter11/Pearl/: license.txt  nbody-v2.1.cc  nbody-v3.cc
Chapter12/: README.txt
Chapter13/Pearl/: CHANGES.TXT  Makefile.in  README.TXT
Chapter14/Pearl/: power_monitor.sh
Chapter15/Pearl/: epilogue.parallel  micN.conf.template  micmpiexec  micscp  prologue  prologue.parallel.mic
Chapter19/: README.txt
Chapter19/Pearl/: 04_VectorizeLoops.cpp  08_ReducePrecision.cpp  10_UseWarmUp.cpp  12_XeonPhiWorkInParallel.cpp  Makefile  README.TXT
Chapter20/Pearl/: Makefile  source_pinned.cpp  source_stream.cpp
Chapter21/Pearl/: README.txt  README_INTEL_XEON_PHI.txt
Chapter22/Pearl/: LICENSE  linux_intel.def  linux_nvidia.def  matmul.hpp  matmul_host.cpp  matmul_kernel.cl  util.hpp  win_intel.def  wtime.c
Chapter23/Pearl/: README.TXT  launch.sh  run_on_mic.pl  run_on_xeon.pl
Chapter24/Pearl/: LICENSE  Makefile  perf-MIC.txt
Chapter25/: README.txt
Chapter25/Pearl/: README.txt
Chapter27/Pearl/: HilbertArray.hpp  MachineInfo.cpp  Matrix.hpp  McDMV.cpp  SparseMatrix.hpp  Upscaler.hpp  changelog.txt  mm2htrp.cpp  sbd2trp-main.cpp  sbdmv.cpp
Chapter28/Pearl/: Makefile  timer.c  timer.h  zmatmul.c  zorder2d.c
Pearls1_Chapter02/: README.txt
Pearls1_Chapter02/Pearl/: GIT-VERSION-GEN  array-macros.hpp  pcl-hydro-core.cpp  pcl-hydro-util.cpp  pcl-hydro-vcore.cpp  pcl-hydro.hpp  run-tile.cpp  test.nml  timeseries.hpp  vtkfile.cpp
Pearls1_Chapter03/: README.txt
Pearls1_Chapter03/Pearl/: Makefile.in  Makefile.include.in  Makefile.manual.in  README  TODO.txt  configure.ac  sub.mk
Pearls1_Chapter03/Pearl/config/: ac_c_bigendian_cross.m4  uniqify.m4
Pearls1_Chapter03/Pearl/logs/: Xeon-E5-2697v2_logfile.000  select_mpi_decompo_from_pruned_gen.sh
Pearls1_Chapter03/Pearl/src/: auto_decompo.f90  dmi_omp.F90  extreme.f90  io_control.f90  io_miscsubs.f90  io_mpi.F90  tflow.F90  tflow_2.F90
Pearls1_Chapter03/Pearl/src/optional/: io_subs_flush_2003.f90  io_subs_flush_external.f90
Pearls1_Chapter03/Pearl/src/optional/contiguous/: copy_t2tt_14.inc  diffusion_hx_14.inc  diffusion_vi_14.inc  masscorr.inc  masscorr_14.inc  tflow.c_cx_cy_cz.inc  tflow.c_tu.inc  tflow.c_tu_14.inc  tflow_advection.inc  tflow_dtx.inc  tflow_dty.inc  tflow_dtz.inc  tflow_int.inc  tflow_rin.inc  tflow_tt_14.inc  tflow_up_ext.inc
Pearls1_Chapter03/Pearl/testcase/BaffinBay_2nm/: README.txt  hz.bin.bz2  mpi_decompo_13x1.txt  mpi_decompo_17x1.txt  mpi_decompo_18x1.txt  mpi_decompo_19x1.txt  mpi_decompo_1x1.txt  mpi_decompo_20x1.txt  mpi_decompo_21x1.txt  mpi_decompo_22x1.txt  mpi_decompo_23x1.txt  mpi_decompo_29x1.txt  mpi_decompo_2x1.txt  mpi_decompo_30x1.txt  mpi_decompo_33x1.txt  mpi_decompo_36x1.txt  mpi_decompo_37x1.txt  mpi_decompo_3x1.txt  mpi_decompo_40x1.txt  mpi_decompo_43x1.txt  mpi_decompo_4x1.txt  mpi_decompo_50x1.txt  mpi_decompo_51x1.txt  mpi_decompo_54x1.txt  mpi_decompo_59x1.txt  mpi_decompo_5x1.txt  mpi_decompo_61x1.txt  mpi_decompo_62x1.txt  mpi_decompo_63x1.txt  mpi_decompo_65x1.txt  mpi_decompo_68x1.txt  mpi_decompo_69x1.txt  mpi_decompo_6x1.txt  mpi_decompo_70x1.txt  mpi_decompo_72x1.txt  mpi_decompo_76x1.txt  mpi_decompo_78x1.txt  mpi_decompo_7x1.txt  mpi_decompo_81x1.txt  mpi_decompo_84x1.txt  (+6 more)
Pearls1_Chapter04/Pearl/: GNUmakefile.gnu  GNUmakefile.intel  GNUmakefile.intel.mpi  README  inputs_SMC  runXeonPhiOMP.sh  steps.txt
Pearls1_Chapter05/Pearl/: HyperThreadPhalanx.c  HyperThreadPhalanx.h  MakefileWindows  diffusion_omp.c  diffusion_ompvect.c  diffusion_tiled.c  diffusion_tiled_HT1.c  run_host.bat  run_host.sh
Pearls1_Chapter06/Pearl/: CMakeLists.txt  ftEvaluator.cpp  ftFileReader.cpp  ftFileReader.h  ftNamePool.h  ftNode.cpp  ftNodeVisitor.h  ftParser.cpp  ftParser.h  ftTypes.h  main.cpp
Pearls1_Chapter06/Pearl/CMake/: clang.cmake
Pearls1_Chapter06/Pearl/samples/: sample2
Pearls1_Chapter07/: README.txt
Pearls1_Chapter07/Pearl/: README.md
Pearls1_Chapter07/results/: RESULTS.txt
Pearls1_Chapter08/Pearl/: Makefile.intel  README  comm.h  ljs.h  neighbor.cpp  neighbor.h  openmp.h  setup.cpp  timer.h  variant.h
Pearls1_Chapter09/Pearl/: Makefile
Pearls1_Chapter11/Pearl/: Makefile  README.TXT  nbody-v0.cc  nbody-v1.cc  nbody-v2.cc
Pearls1_Chapter13/: README.txt
Pearls1_Chapter13/Pearl/: Makefile  README.md
Pearls1_Chapter14/Pearl/: power_logger.py
Pearls1_Chapter15/: README.txt
Pearls1_Chapter15/Pearl/: allmicput  default.conf.template  ifcfg-mic0  ifcfg-micbr0  mic-create-conf.sh  micssh  prologue.parallel
Pearls1_Chapter17/: README.txt
Pearls1_Chapter18/: README.txt
Pearls1_Chapter18/Pearl/: ReadMe.txt
Pearls1_Chapter19/Pearl/: 01_CheckCorrectness.cpp  02_ReferenceVersion.cpp  03_DoNotMixDataTypes.cpp  05_UseFastMathFunctions.cpp  06_EquivalentTransformations.cpp  07_AlignArrays.cpp  09_WorkInParallel.cpp  11_XeonPhi.cpp  13_XeonPhiStreamingStores.cpp  LICENSE.LGPL
Pearls1_Chapter20/Pearl/: common.h  readme.txt  sink.cpp  source_normal.cpp
Pearls1_Chapter22/Pearl/: README.txt  a.out  apple.def  makefile  (+4 more)
Pearls1_Chapter26/: README.txt
(+15375 files in other folders)
